Making PlasticStyleSheet the default to eliminate the required Settings.setSkin line.
Signed-off-by: Ash Atkins <ash@razorberry.com>

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 /.project
 /.flexLibProperties
 /.actionScriptProperties
+/.settings
+/bin
+/.actionScriptProperties
+/.flexLibProperties
+/.project
